# remapcv

./: .gitignore  LICENSE  README.md  pyproject.toml
remapcv/: __init__.py  automap.py  cli.py  fake.py  merge.py  scan.py  yolo.py
tests/: test_automap.py
