[project]
name = "remapcv"
version = "0.1.0"
description = "Merge computer-vision datasets with smart class remapping."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
remapcv = "remapcv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
